' SPDX-License-Identifier: MIT
@startuml
skinparam linetype ortho
hide empty methods
hide empty fields
package com.mercedesbenz.sechub.domain.scan.project{
'com.mercedesbenz.sechub.domain.scan.project.FalsePositiveDataService
   class FalsePositiveDataService ##[bold]black {
    ~ScanReportRepository : scanReportRepository
    ~ScanProjectConfigService : configService
    ~FalsePositiveDataListValidation : falsePositiveJobDataListValidation
    ~FalsePositiveDataConfigMerger : merger
  }
  FalsePositiveDataService *-- FalsePositiveDataConfigMerger
  FalsePositiveDataService -[#blue]- FalsePositiveDataList
  FalsePositiveDataService *-- FalsePositiveDataListValidation
  FalsePositiveDataService -[#blue]- FalsePositiveProjectConfiguration
  FalsePositiveDataService *-- ScanProjectConfigService
  FalsePositiveDataService *-- com.mercedesbenz.sechub.domain.scan.report.ScanReportRepository
'com.mercedesbenz.sechub.domain.scan.project.FalsePositiveDataConfigMerger
   class FalsePositiveDataConfigMerger{
  }
  FalsePositiveDataConfigMerger .[#green]. com.mercedesbenz.sechub.commons.model.SecHubCodeCallStack
  FalsePositiveDataConfigMerger -[#blue]- com.mercedesbenz.sechub.commons.model.SecHubFinding
  FalsePositiveDataConfigMerger .. FalsePositiveCodePartMetaData
  FalsePositiveDataConfigMerger .. FalsePositiveEntry
  FalsePositiveDataConfigMerger -[#blue]- FalsePositiveJobData
  FalsePositiveDataConfigMerger -[#blue]- FalsePositiveMetaData
  FalsePositiveDataConfigMerger -[#blue]- FalsePositiveProjectConfiguration
  FalsePositiveDataConfigMerger -[#blue]- com.mercedesbenz.sechub.domain.scan.report.ScanSecHubReport
'com.mercedesbenz.sechub.domain.scan.project.FalsePositiveDataList
   class FalsePositiveDataList{
    -String : apiVersion
    -String : type
    -FalsePositiveJobData : jobData
  }
  FalsePositiveDataList -[#blue]- FalsePositiveJobData
  FalsePositiveDataList -[#blue]- FalsePositiveProjectData
'com.mercedesbenz.sechub.domain.scan.project.FalsePositiveProjectConfiguration
   class FalsePositiveProjectConfiguration{
    -List<FalsePositiveEntry> : falsePositives
  }
  FalsePositiveProjectConfiguration -[#blue]- FalsePositiveEntry
'com.mercedesbenz.sechub.domain.scan.project.ScanProjectConfigService
   class ScanProjectConfigService{
    ~ScanProjectConfigRepository : repository
  }
  ScanProjectConfigService -[#blue]- ScanProjectConfig
  ScanProjectConfigService *-- ScanProjectConfigRepository
'com.mercedesbenz.sechub.domain.scan.project.FalsePositiveJobData
   class FalsePositiveJobData{
    -UUID : jobUUID
    -String : comment
  }
'com.mercedesbenz.sechub.domain.scan.project.FalsePositiveCodePartMetaData
   class FalsePositiveCodePartMetaData{
    -String : location
    -String : relevantPart
    -String : sourceCode
  }
'com.mercedesbenz.sechub.domain.scan.project.FalsePositiveProjectData
   class FalsePositiveProjectData{
    -String : id
    -String : comment
    -WebscanFalsePositiveProjectData: webScan
  }
'com.mercedesbenz.sechub.domain.scan.project.WebscanFalsePositiveProjectData
   class WebscanFalsePositiveProjectData{
    -Integer : cweId
    -String : urlPattern
    -List<String> : methods
  }
  FalsePositiveProjectData *-- WebscanFalsePositiveProjectData
'com.mercedesbenz.sechub.domain.scan.project.FalsePositiveEntry
   class FalsePositiveEntry{
    -FalsePositiveJobData : jobData
    -String : author
    -FalsePositiveMetaData : metaData
    -Date : created
  }
  FalsePositiveEntry -[#blue]- FalsePositiveJobData
  FalsePositiveEntry -[#blue]- FalsePositiveMetaData
  FalsePositiveEntry -[#blue]- FalsePositiveProjectData
'com.mercedesbenz.sechub.domain.scan.project.FalsePositiveMetaData
   class FalsePositiveMetaData{
    -ScanType : scanType
    -String : name
    -Severity : severity
    -FalsePositiveCodeMetaData : code
    -FalsePositiveWebMetaData : web
    -Integer : cweId
    -String : cveId
    -String : owasp
  }
  FalsePositiveMetaData -[#blue]- com.mercedesbenz.sechub.commons.model.ScanType
  FalsePositiveMetaData -[#blue]- com.mercedesbenz.sechub.commons.model.Severity
  FalsePositiveMetaData -[#blue]- FalsePositiveCodeMetaData
  FalsePositiveMetaData -[#blue]- FalsePositiveWebMetaData

'com.mercedesbenz.sechub.domain.scan.project.FalsePositiveCodeMetaData
   class FalsePositiveCodeMetaData{
    -FalsePositiveCodePartMetaData : start
    -FalsePositiveCodePartMetaData : end
  }
  FalsePositiveCodeMetaData *-- FalsePositiveCodePartMetaData
'com.mercedesbenz.sechub.domain.scan.project.FalsePositiveWebMetaData
   class FalsePositiveWebMetaData{
    -FalsePositiveWebRequestMetaData : request
    -FalsePositiveWebResponseMetaData: response
  }
  FalsePositiveWebMetaData *-- FalsePositiveWebRequestMetaData
  FalsePositiveWebMetaData *-- FalsePositiveWebResponseMetaData
'com.mercedesbenz.sechub.domain.scan.project.FalsePositiveWebRequestMetaData
   class FalsePositiveWebRequestMetaData{
    -String: method
    -String: target
    -String: protocol
    -String: version
    -String: attackVector
    
  }
  
  'com.mercedesbenz.sechub.domain.scan.project.FalsePositiveWebResponseMetaData
   class FalsePositiveWebResponseMetaData{
    -String: evidence
    -int: statuscode
  }
  

@enduml
